Change about page image

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 
                 <section class="grid grid-cols-12 pb-12 px-4 sm:px-20">
                     <section class="col-span-12 md:col-span-4 md:px-3">
-                        <img src="./images/aminfo.jpg" alt="" class="h-full rounded-3xl object-cover">
+                        <img src="./images/IMG_20230801_170617.png" alt="" class="h-full rounded-3xl object-cover">
                     </section>
 
                     <section class="col-span-12 md:col-span-8 md:px-3 py-5 md:py-3">
